# aws-sailfish-sdk

./: .gitmodules  CNAME  Dockerfile  Dockerfile_sailfishos  Dockerfile_ubuntu  README.md  docker-compose.yml  funcs.sh  get_notes.py  install.sh  knowlage.sh  pyproject.toml
.github/workflows/: anchore.yml  codacy.yml  linter.yml
spec/: get_name_platform_spec.sh  git_submodule_checkout_spec.sh
